--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Inicio</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia sunt ex labore ea nam. Recusandae, impedit amet ab vel rerum modi officiis minima ratione qui ad tenetur! Deleniti, cupiditate similique?</p>
 </body>
 
 </html>
