--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia sunt ex labore ea nam. Recusandae, impedit amet ab vel rerum modi officiis minima ratione qui ad tenetur! Deleniti, cupiditate similique?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eaque earum aut consequatur sint eos amet ipsum voluptates temporibus libero, eveniet necessitatibus impedit voluptas dignissimos suscipit soluta obcaecati aliquam! Quisquam?</p>
     <h2>Koala</h2>
+    <p>Está peluchito</p>
 </body>
 
 </html>
