--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente eaque earum aut consequatur sint eos amet ipsum voluptates temporibus libero, eveniet necessitatibus impedit voluptas dignissimos suscipit soluta obcaecati aliquam! Quisquam?</p>
     <h2>Koala</h2>
     <p>Está peluchito</p>
+    <h3>Hola</h3>
 </body>
 
 </html>
